<resources>
    <string name="app_name">Find Food</string>
    <string name="find_nearby_food">Find nearby food!</string>
    <string name="no_data">No data</string>
    <string name="saved_places">Saved places</string>
    <string name="nearby_food">Nearby food</string>
    <string name="max_distance">Max distance (m)</string>
    <string name="update">Update</string>
    <string name="necessary_location_permission">Location permission is necessary for finding places</string>
    <string name="settings">Settings</string>
    <string name="closed">Closed</string>
    <string name="follow_place">Follow place</string>
    <string name="unfollow_place">Unfollow place</string>
    <string name="open_now">Open now</string>
    <string name="check_on_maps">Check on Google Maps</string>
    <string name="check_website">Check website</string>
    <string name="description_icon">Place\'s icon</string>

</resources>