<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.maicondcastro.findfood.places.placedetails.PlaceDetailsViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/motion_detail"
        tools:context="com.maicondcastro.findfood.places.savedplaces.SavedPlacesFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:fadeVisible="@{viewModel.loadedPlace}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/open"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textInt="@{viewModel.placeItem.openNowText}"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Open now" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/description_icon"
                    android:fadeVisible="@{viewModel.placeItem.hasIcon}"
                    app:layout_constraintBottom_toBottomOf="@id/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/name" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:text="@{viewModel.placeItem.name}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/rating"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintTop_toTopOf="@id/rating"
                    tools:text="Chama App" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fadeVisible="@{viewModel.placeItem.ratingString.length() > 0}"
                    android:text="@{viewModel.placeItem.ratingString}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal"
                    app:drawableStartCompat="@drawable/ic_star_rate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/open"
                    tools:text="4.8 (500)" />

                <TextView
                    android:id="@+id/vicinity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@{viewModel.placeItem.vicinity}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    tools:text="Egelantiersgracht 390, 1015 RR Amsterdam, Netherlands" />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:drawablePadding="@dimen/spacing_small"
                    android:text="@{viewModel.distanceString}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small"
                    app:drawableStartCompat="@drawable/ic_place"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vicinity"
                    tools:text="30m" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:background="#CCCCCC"
                    android:fadeVisible="@{viewModel.placeItem.weekString.length() > 0}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/distance" />

                <TextView
                    android:id="@+id/week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:fadeVisible="@{viewModel.placeItem.weekString.length() > 0}"
                    android:text="@{viewModel.placeItem.weekString}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/distance"
                    tools:text="Monday: 5:15 PM – 1:15 AM\nTuesday: 5:15 PM – 1:15 AM\nWednesday: 5:15 PM – 1:15 AM\nThursday: 5:15 PM – 1:15 AM\nFriday: 5:15 PM – 1:15 AM\nSaturday: Closed\nSunday: Closed" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:background="#CCCCCC"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/week" />

                <TextView
                    android:id="@+id/map"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:drawablePadding="@dimen/spacing_small"
                    android:fadeVisible="@{viewModel.placeItem.hasMapUrl}"
                    android:text="@string/check_on_maps"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small"
                    app:drawableStartCompat="@drawable/ic_map"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/week" />

                <TextView
                    android:id="@+id/site"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fadeVisible="@{viewModel.placeItem.hasWebSite}"
                    android:gravity="end"
                    android:text="@string/check_website"
                    android:textColor="@color/link"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="@id/map"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/map"
                    app:layout_constraintTop_toTopOf="@id/map" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <fragment
            android:id="@+id/location_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            app:layout_constraintBottom_toTopOf="@id/follow_place_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card"
            tools:context=".SelectLocationFragment" />

        <Button
            android:id="@+id/follow_place_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fadeVisible="@{viewModel.loadedPlace}"
            android:text="@string/follow_place"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>